fixed scrollbar, added scroll snap

--- a/src/features/Landing/landing.module.css
+++ b/src/features/Landing/landing.module.css
@@ -1,13 +1,17 @@
 .landing-container {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column; */
   width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 
 .landing-logo {
   height: 100vh;
+  scroll-snap-align: center;
   display: flex;
   text-align: left;
   flex-direction: column;
@@ -16,6 +20,7 @@
 }
 
 .landing-projects {
+  scroll-snap-align: center;
   height: 100vh;
   padding-left: 8rem;
   padding-right: 8rem;
@@ -28,6 +33,7 @@
   text-align: center;
 }
 
+
 .landing-subtext {
   display: flex;
   flex-direction: column;
@@ -38,13 +44,13 @@
 
 .landing-subtitle {
   font-size: 3rem;
-  color: var(--background-primary);
+  color: var(--text-primary);
   text-align: left;
 }
 
 .landing-construction {
   font-size: 2rem;
-  color: var(--background-primary);
+  color: var(--text-primary);
   text-align: left;
 }
 
@@ -63,7 +69,7 @@
 
   .landing-projects {
     padding: 0;
-    height: auto;
+    height: 100vh;
   }
 
   .landing-title {
